# scancode-toolkit

./: pyproject.toml  setup.cfg
src/licensedcode/: cache.py  plugin_license.py
tests/packagedcode/data/pypi/unpacked_sdist/metadata-2.1/commoncode-21.5.12/: pyproject.toml
